@@ -3,6 +3,7 @@ package com.intellij.java.codeInsight.daemon
 
 import com.intellij.codeInsight.daemon.impl.JavaHighlightInfoTypes
 import com.intellij.codeInsight.daemon.impl.analysis.JavaModuleGraphUtil
+import com.intellij.codeInsight.daemon.impl.analysis.VirtualManifestProvider
 import com.intellij.codeInsight.intention.IntentionActionDelegate
 import com.intellij.codeInspection.IllegalDependencyOnInternalPackageInspection
 import com.intellij.codeInspection.deprecation.DeprecationInspection
@@ -10,13 +11,16 @@ import com.intellij.codeInspection.deprecation.MarkedForRemovalInspection
 import com.intellij.java.testFramework.fixtures.LightJava9ModulesCodeInsightFixtureTestCase
 import com.intellij.java.testFramework.fixtures.MultiModuleJava9ProjectDescriptor.ModuleDescriptor
 import com.intellij.java.testFramework.fixtures.MultiModuleJava9ProjectDescriptor.ModuleDescriptor.*
+import com.intellij.openapi.module.Module
 import com.intellij.openapi.roots.ProjectRootManager
 import com.intellij.openapi.util.TextRange
 import com.intellij.psi.JavaCompilerConfigurationProxy
+import com.intellij.psi.PsiJavaModule
 import com.intellij.psi.PsiManager
 import com.intellij.psi.search.GlobalSearchScope
 import com.intellij.psi.search.ProjectScope
 import com.intellij.psi.util.PsiUtilCore
+import com.intellij.testFramework.ExtensionTestUtil
 import org.assertj.core.api.Assertions.assertThat
 import java.util.jar.JarFile
 
@@ -26,6 +30,15 @@ class ModuleHighlightingTest : LightJava9ModulesCodeInsightFixtureTestCase() {
 
     addFile("module-info.java", "module M2 { }", M2)
     addFile("module-info.java", "module M3 { }", M3)
+  }
+
+  private fun withCompileArguments(module: Module = getModule(), vararg arguments: String, test: () -> Unit) {
+    try {
+      JavaCompilerConfigurationProxy.setAdditionalOptions(project, module, arguments.toList())
+      test()
+    } finally {
+      JavaCompilerConfigurationProxy.setAdditionalOptions(project, module, emptyList())
+    }
   }
 
   fun testPackageStatement() {
@@ -66,6 +79,11 @@ class ModuleHighlightingTest : LightJava9ModulesCodeInsightFixtureTestCase() {
 
   fun testFileDuplicateInTestRoot() {
     addTestFile("module-info.java", """module M.test { }""")
+    highlight("""module M { }""")
+  }
+
+  fun testFileDuplicateInResourceRoot() {
+    addResourceFile("module-info.java", """module M.test { }""")
     highlight("""module M { }""")
   }
 
@@ -351,18 +369,46 @@ class ModuleHighlightingTest : LightJava9ModulesCodeInsightFixtureTestCase() {
       package <error descr="Package 'lang' exists in another module: java.base">java.lang</error>;
       public class Main {}
     """.trimIndent())
-    try {
-      JavaCompilerConfigurationProxy.setAdditionalOptions(project, module, listOf("--patch-module=java.base=/src"))
+    withCompileArguments(module, "--patch-module=java.base=/src") {
       highlight("Main.java", """
        package java.lang;
        public class Main {}
      """.trimIndent())
     }
-    finally {
-      JavaCompilerConfigurationProxy.setAdditionalOptions(project, module, listOf())
+  }
+
+  fun testAddReadsDependingOnSourceModule() {
+    addFile("pkg/m4/C4.java", """
+      package pkg.m4;     
+      public class C4 { }
+    """.trimIndent(), M4)
+    myFixture.addFileToProject("module-info.java", "module M { }")
+    highlight("TestFoo.java", """
+      import <error descr="Package 'pkg.m4' is declared in the unnamed module, but module 'M' does not read it">pkg.m4</error>.C4;
+      public class TestFoo { }
+    """.trimIndent())
+    withCompileArguments(module, "--add-reads", "M=ALL-UNNAMED") {
+      highlight("TestBar.java", """
+        import pkg.m4.C4;
+        public class TestBar { }
+    """.trimIndent())
     }
   }
-  
+
+  fun testAddReadsDependingOnLibrary() {
+    myFixture.addFileToProject("module-info.java", "module M { }")
+    highlight("TestFoo.java", """
+      import <error descr="Package 'pkg.lib2' is declared in module 'lib.auto', but module 'M' does not read it">pkg.lib2</error>.LC2;
+      public class TestFoo { }
+    """.trimIndent())
+    withCompileArguments(module, "--add-reads", "M=ALL-UNNAMED") {
+      highlight("TestBar.java", """
+        import pkg.lib2.LC2; 
+        public class TestBar { }
+    """.trimIndent())
+    }
+  }
+
   fun testNoModuleInfoSamePackageAsInAttachedLibraryWithModuleInfo() {
     highlight("Main.java", """
       package lib.named;
@@ -546,6 +592,35 @@ class ModuleHighlightingTest : LightJava9ModulesCodeInsightFixtureTestCase() {
     addFile("p/C.java", "package p; public class C {}", module = M4)
     highlight("A.java", """
         public class A extends p.B {
+          private <error descr="Package 'p' is declared in the unnamed module, but module 'M' does not read it">p</error>.C c;
+        }
+        """.trimIndent())
+  }
+
+  fun testAutomaticModuleFromVirtualManifest() {
+    val m6Attributes = mapOf(PsiJavaModule.AUTO_MODULE_NAME to "m6.bar")
+    val attributesMap = mapOf(M6.moduleName to m6Attributes)
+    ExtensionTestUtil.maskExtensions(VirtualManifestProvider.EP_NAME, listOf(TestVirtualManifestProvider(attributesMap)),
+                                     testRootDisposable)
+    highlight("module-info.java", "module M { requires m6.bar; }")
+
+    addFile("p/B.java", "package p; public class B {}", module = M6)
+    addFile("p/C.java", "package p; public class C {}", module = M4)
+    highlight("A.java", """
+        public class A extends p.B {
+          private <error descr="Package 'p' is declared in the unnamed module, but module 'M' does not read it">p</error>.C c;
+        }
+        """.trimIndent())
+  }
+
+  fun testAutomaticModuleWithoutVirtualManifest() {
+    ExtensionTestUtil.maskExtensions(VirtualManifestProvider.EP_NAME, listOf(TestVirtualManifestProvider(emptyMap())), testRootDisposable)
+    highlight("module-info.java", "module M { requires <error descr=\"Module not found: m6.bar\">m6.bar</error>; }")
+
+    addFile("p/B.java", "package p; public class B {}", module = M6)
+    addFile("p/C.java", "package p; public class C {}", module = M4)
+    highlight("A.java", """
+        public class A extends <error descr="Package 'p' is declared in the unnamed module, but module 'M' does not read it">p</error>.B {
           private <error descr="Package 'p' is declared in the unnamed module, but module 'M' does not read it">p</error>.C c;
         }
         """.trimIndent())
